refactor deserializers of data